--- a/charts/ueransim-gnb/values.yaml
+++ b/charts/ueransim-gnb/values.yaml
@@ -65,7 +65,7 @@ name: ueransim-gnb
 amf:
   # if set amf.ip takes precedence over amf.hostname
   ip: ""
-  hostname: open5gs-edge-amf-ngap.open5gs.svc.cluster.local
+  hostname: open5gs_argo-amf-ngap.open5gs_argo.svc.cluster.local
 interfaces:
   n2:
     dev: eth0
