--- a/charts/ueransim-ues/values.yaml
+++ b/charts/ueransim-ues/values.yaml
@@ -73,7 +73,7 @@ key: 465B5CE8B199B49FAA5F0A2EE238A6BC
 op: E8ED289DEBA952E4283B54E88E6183CA
 opType: OPC
 gnb:
-  hostname: ueransim-gnb-edge
+  hostname: ueransim-gnb
 sst: 1
 #sd: "0x111111"
 apnList:
