--- a/charts/open5gs/charts/open5gs-nrf/values.yaml
+++ b/charts/open5gs/charts/open5gs-nrf/values.yaml
@@ -351,3 +351,8 @@ services:
     ##     timeoutSeconds: 300
     ##
     sessionAffinityConfig: {}
+    autoscaling:
+      enabled: false
+      minReplicas: 1
+      maxReplicas: 3
+
