--- a/charts/open5gs/charts/open5gs-nrf/templates/hpa.yaml
+++ b/charts/open5gs/charts/open5gs-nrf/templates/hpa.yaml
@@ -1,13 +1,10 @@
-{{- if .Values.autoscaling.enabled }}
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ template "common.names.fullname" . }}
 spec:
-  minReplicas: {{ .Values.autoscaling.minReplicas }}
-  maxReplicas: {{ .Values.autoscaling.maxReplicas }}
+  maxReplicas: 3
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
     name: {{ template "common.names.fullname" . }}
-{{- end }}
